add images folder

--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 
       <div class="main-content">
         <div class="tweet-box">
-          <img
-            src="../Youtube-Clone/images/profile-pic.png"
-            alt="Profile Picture"
-          />
+          <img src="./images/profile-pic.png" alt="Profile Picture" />
           <div style="flex: 1">
             <textarea rows="2" placeholder="What's happening?"></textarea>
             <div class="tweet-actions">
@@ -68,10 +65,7 @@
         </div>
         <div class="tweets">
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -92,10 +86,7 @@
           </div>
 
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -115,10 +106,7 @@
             </div>
           </div>
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -138,10 +126,7 @@
             </div>
           </div>
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -161,10 +146,7 @@
             </div>
           </div>
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -184,10 +166,7 @@
             </div>
           </div>
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -207,10 +186,7 @@
             </div>
           </div>
           <div class="tweet">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="tweet-content">
               <div class="tweet-header">
                 <span class="name">Codezilla</span>
@@ -258,10 +234,7 @@
         <div class="box who-to-follow">
           <h3>Who to follow</h3>
           <div class="follow-item">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="follow-info">
               <strong>Islam Mahfauz</strong>
               <span>@Codezilla_ follows you</span>
@@ -269,10 +242,7 @@
             <button class="follow-btn">Follow</button>
           </div>
           <div class="follow-item">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="follow-info">
               <strong>Islam Mahfauz</strong>
               <span>@Codezilla_ follows you</span>
@@ -280,10 +250,7 @@
             <button class="follow-btn">Follow</button>
           </div>
           <div class="follow-item">
-            <img
-              src="../Youtube-Clone/images/profile-pic.png"
-              alt="Profile Picture"
-            />
+            <img src="./images/profile-pic.png" alt="Profile Picture" />
             <div class="follow-info">
               <strong>Islam Mahfauz</strong>
               <span>@Codezilla_ follows you</span>
